--- a/DL10RetrofitCoroutinesLib/build.gradle
+++ b/DL10RetrofitCoroutinesLib/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -30,15 +30,15 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.moshi:moshi:1.9.2"
-    implementation "com.squareup.retrofit2:converter-moshi:2.7.1"
-    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.9.2"
+    implementation 'com.squareup.moshi:moshi:1.11.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
 
 }
