--- a/DL10RetrofitCoroutinesLib/build.gradle
+++ b/DL10RetrofitCoroutinesLib/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -34,11 +34,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2-native-mt"
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation 'com.squareup.moshi:moshi:1.11.0'
+    implementation 'com.squareup.moshi:moshi:1.12.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
-    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.11.0'
+    kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
 
 }
