--- a/DL10RetrofitCoroutinesLib/build.gradle
+++ b/DL10RetrofitCoroutinesLib/build.gradle
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 4
-        versionName "1.3"
+        versionCode 5
+        versionName "1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -40,5 +40,8 @@ dependencies {
     implementation 'com.squareup.moshi:moshi:1.12.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+
+    // 日期工具
+    implementation 'com.github.D10NGYANG:DLDateUtil:1.1'
 
 }
